--- a/Ecommerce+Market+Research+Proposal.ipynb
+++ b/Ecommerce+Market+Research+Proposal.ipynb
@@ -12,7 +12,7 @@
     "    \n",
     "    \"A niche market is the subset of the market on which a specific product is focused. The market niche defines as the product features aimed at satisfying specific market needs, as well as the price range, production quality, and the demographics that is intended to impact. \n",
     "    \n",
-    "    The niche market is highly specialized, and aiming(sic) to survicve among the competition from numerous super companies. Even established companies create products for different niches, for example, Hewlett-Packard has all-in-one machines for printing, scanning, and faxing targeted for the home office niche while at the same time having separate machines with one of these functions for big businesses.\" \n",
+    "    The niche market is highly specialized, and aiming(sic) to survive among the competition from numerous super companies. Even established companies create products for different niches, for example, Hewlett-Packard has all-in-one machines for printing, scanning, and faxing targeted for the home office niche while at the same time having separate machines with one of these functions for big businesses.\" \n",
     "    \n",
     "With this definition in mind, the problem will be defined as, \"With competition saturating the ecommerce market, what is the best niche market for a business or entrepreneur to expand into?\" \n",
     "\n",
@@ -21,7 +21,13 @@
     "\n",
     "### How is your solution valuable?\n",
     "\n",
-    "The result of this project will be a solution that exceeds the competition (other niche market research tools) in terms of finding the ideal niche market in a given sector. The ideal niche market is one that has a combination of high search volume, has products that are difficult for consumers to find locally, solves a common problem or has a customer base that is passionate, is not overrun with websites that have a PageRank of five or higher (see appendix), and has accessible suppliers. \n",
+    "The result of this project will be a solution that exceeds the performance of other niche market research tools in terms of finding the ideal niche market in a given sector. The ideal niche market is one that has some or all of the following criteria: \n",
+    "* high search volume \n",
+    "* products that are difficult for consumers to find locally\n",
+    "* solves a common problem \n",
+    "* has a customer base that is passionate\n",
+    "* is not overrun with websites that have a PageRank of five or higher (see appendix), and has accessible suppliers. \n",
+    "# Explain how Google PageRank works\n",
     "\n",
     "The solution will drastically reduce the amount of hours and wages spent for market research and will be a valuable tool for anyone in ecommerce, from large companies to individual entrepreneurs.\n",
     "\n",
@@ -29,16 +35,22 @@
     "### What is your data source and how will you access it?\n",
     "##### Links to sources in appendix\n",
     "\n",
-    "Initial Information - Facebook, Google News, Google Trends, and Twitter APIs.\n",
+    "Data for Machine Learning Models - Facebook and Twitter APIs\n",
     "\n",
     "Competition Research - PageRank Status for Chrome\n",
     "\n",
+    "Validation - Google Trends\n",
     "\n",
     "### What techniques from the course do you anticipate using?\n",
     "\n",
     "The project will begin with a broad search of keywords related to technology appliances on Keyword Planner (see appendix). For example, a keyword search was conducted for \"Consumer Electronics Appliances\" that returned seven hundred keywords with information on their average monthly searches and their level of competition (Low, Medium, or High). This information will be downloaded and filtered to generate a list of keywords that have a high number of average monthly searches and a low rank of competition. \n",
     "\n",
+    "# Take info from keyword planner on how they measure competition. \n",
+    "\n",
     "Twitter and Facebook will then be scraped to gather posts that reference the products in the keyword list. With this data, an Unsupervised Neural Network will perform Natural Language Processing to generate sentiment analysis of the products. \n",
+    "\n",
+    "# Talk about seasonality techniques\n",
+    "https://www.investopedia.com/ask/answers/052215/are-there-significant-seasonal-patterns-electronics-sector.asp\n",
     "\n",
     "The combined data from all techniques will be used as the features for a Supervised Neural Network that will predict the rise in popularity of a product over a six month period. \n",
     "\n",
@@ -49,23 +61,34 @@
     "\n",
     "Competition - This will require some research into how saturated the market is for a given product. The competition will be evaluated by using the Google PageRank Status (link in appendix). \n",
     "\n",
-    "Seasonality - Since seasonality can have a large impact on the interest in season-specific items (e.g. swimsuits in Spring / Summer, jackets in Fall / Winter), the seasonality of certain products will be taken into consideration.\n",
+    "Seasonality - Consumer electronics show some of the strongest seasonal trends. \n",
+    "# Batteries are an example from the investopedia link.  Reference seasonality techniques.\n",
     "\n",
     "\n",
     "### Appendix\n",
     "\n",
     "##### Sources:\n",
+    "\n",
     "Facebook: http://graph.facebook.com\n",
+    "\n",
     "Google Trends: https://developers.google.com/gdata/docs/directory\n",
+    "\n",
     "Google News: https://newsapi.org/s/google-news-api\n",
+    "\n",
     "Keyword Planner: https://adwords.google.com/ko/KeywordPlanner/Home?sourceid=awo&__u=3050284228&__c=9347440984&authuser=0#search\n",
+    "\n",
     "PageRank Status: https://chrome.google.com/webstore/detail/hbdkkfheckcdppiaiabobmennhijkknn\n",
+    "\n",
     "Twitter: https://developer.twitter.com/en/docs/basics/getting-started\n",
     "\n",
     "\n",
-    "------------------------------------ Not used yet\n",
+    "------------------------------------ \n",
+    "Not used yet\n",
+    "\n",
     "http://whois.domaintools.com/thinkful.com\n",
+    "\n",
     "http://tools.seobook.com/\n",
+    "\n",
     "https://docs.aws.amazon.com/AlexaTopSites/latest/ApiReference_TopSitesAction.html"
    ]
   }
